# CSC-252-Projects

./: .gitignore  CMakeLists.txt  LICENSE
asm2/: test_01.out.hexdump  test_01.student_output.hexdump  test_student1_count_1.out.hexdump  test_student1_count_1.s  test_student1_count_1.student_output.hexdump  test_student1_count_1_spaces.out.hexdump  test_student1_count_1_spaces.s  test_student1_count_1_spaces.student_output.hexdump  test_student1_count_newlines_1.out.hexdump  test_student1_count_newlines_1.s  test_student1_count_newlines_1.student_output.hexdump  test_student1_count_newlines_2.out.hexdump  test_student1_count_newlines_2.s  test_student1_count_newlines_2.student_output.hexdump  test_student1_count_rev.out.hexdump  test_student1_count_rev.s  test_student1_count_rev.student_output.hexdump  test_student1_count_single.out.hexdump  test_student1_count_single.s  test_student1_count_single.student_output.hexdump  test_student1_fib_1.out.hexdump  test_student1_fib_1.student_output.hexdump  test_student1_fib_2.out.hexdump  test_student1_fib_2.s  test_student1_fib_2.student_output.hexdump  test_student1_fib_odd.out.hexdump  test_student1_fib_odd.s  test_student1_fib_odd.student_output.hexdump  test_student1_fib_runcheck_neither.out.hexdump  test_student1_fib_runcheck_neither.s  test_student1_fib_runcheck_neither.student_output.hexdump  test_student1_fib_square.out.hexdump  test_student1_fib_square.s  test_student1_fib_square.student_output.hexdump  test_student1_none.out.hexdump  test_student1_none.s  test_student1_none.student_output.hexdump  test_student1_rev_1.s  test_student1_rev_1.student_output.hexdump  test_student1_rev_newline.s  (+103 more)
asm3/: asm3.s
asm5/: asm5.s
sim4/: a.out  sim4.c  test_01_getInstruction  test_02_executeControl1  test_03_executeControl2  test_04_aluInputs  test_05_execALU  test_06_execMEM  test_07_fullInstructions  test_07_fullInstructions_-_disabled_opcode_field_1  test_07_fullInstructions_-_disabled_opcode_field_2  test_07_fullInstructions_-_disabled_opcode_field_3  test_08_checkUpper4BitsOnJump  test_09_singleInstruction  test_10_syscalls  test_11_multipleInstructions1  test_12_multipleInstructions1-noDebug  test_13_invalidInstructions  test_20_ADD_SUB_ADDI  test_21_AND_OR_XOR  test_22_SLT_SLTI  test_extraInst_ANDI  test_extraInst_BNE  (+6 more)
sim5/: sim5.c  (+11 more)
(+61 files in other folders)
